Fix including role for docker-ce

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,1 @@
-- src: mongrelion.docker
-- src: https://github.com/haxorof/ansible-role-docker-ce
-  name: haxorof.ansible-role-docker-ce
+- src: zaxos.docker-ce-ansible-role
