--- a/site.yml
+++ b/site.yml
@@ -11,8 +11,9 @@
         user: "{{ ansible_ssh_user }}"
       when: user is not defined
   roles:
-    - go
     - python3
+    - go
+    - rust
     - develop
     - nvim
     - jq
