--- a/roles/python3/tasks/main.yml
+++ b/roles/python3/tasks/main.yml
@@ -16,7 +16,7 @@
   become: yes
   become_user: root
   with_items: [ "python35u", "python35u-pip" ]
-- name: set python3.5 path
+- name: set python3 path
   shell: which python3.5
   register: python3_path
 - name: make link python3
@@ -24,7 +24,15 @@
     path: "{{ user_home }}/local/bin/python3"
     src: "{{ python3_path.stdout_lines[0] }}"
     state: link
-- name: install pip3.5
+- name: set pip3 path
+  shell: which pip3.5
+  register: pip3_path
+- name: make link pip3
+  file:
+    path: "{{ user_home }}/local/bin/pip3"
+    src: "{{ pip3_path.stdout_lines[0] }}"
+    state: link
+- name: install pkgs of pip3
   shell: |
     pip3.5 install "{{ item }}"
   with_items: [ virtualenv, virtualenvwrapper ]
