--- a/roles/python3/tasks/main-CentOS.yml
+++ b/roles/python3/tasks/main-CentOS.yml
@@ -15,7 +15,7 @@
     enablerepo: ius
   become: yes
   become_user: root
-  with_items: [ "python35u", "python35u-pip" ]
+  with_items: [ python35u, python35u-pip, python3-devel ]
 - name: set python3 path
   shell: which python3.5
   register: python3_path
@@ -33,8 +33,9 @@
     src: "{{ pip3_path.stdout_lines[0] }}"
     state: link
 - name: install pkgs with pip3
-  shell: |
-    pip3 install "{{ item }}"
+  pip:
+    name: "{{ item }}"
+    executable: pip3
   with_items: "{{ pip3_pkgs }}"
   become: yes
   become_user: root
