--- a/roles/vim/meta/main.yml
+++ b/roles/vim/meta/main.yml
@@ -3,4 +3,4 @@ galaxy_info:
   license: license (BSD)
   min_ansible_version: 1.2
   galaxy_tags: []
-dependencies: [ python3 ]
+dependencies: [ python3, lua ]
