--- a/roles/rust/tasks/main.yml
+++ b/roles/rust/tasks/main.yml
@@ -10,6 +10,7 @@
     creates: '{{ user_home }}/.cargo/bin/rustc'
 - name: set restup deefault
   shell: |
+    reload
     rustup default stable
 - name: set component add rust-src
   shell: |
