--- a/site.yml
+++ b/site.yml
@@ -8,24 +8,49 @@
     - go14root:  "{{ user_home }}/go1.4"
   pre_tasks:
     - set_fact:
-        user: "{{ ansible_ssh_user }}"
+        user: "{{ ansible_user }}"
       when: user is not defined
   roles:
-    - develop
-    - rust
-    - go
-    - python3
-    - vim
-    - nvim
-    - jq
+    - role: common
+      become: yes
+      become_user: "{{ user }}"
+    - role: develop
+      become: yes
+      become_user: "{{ user }}"
+    - role: rust
+      become: yes
+      become_user: "{{ user }}"
+    - role: go
+      become: yes
+      become_user: "{{ user }}"
+    - role: python3
+      become: yes
+      become_user: "{{ user }}"
+    - role: vim
+      become: yes
+      become_user: "{{ user }}"
+    - role: nvim
+      become: yes
+      become_user: "{{ user }}"
+    - role: jq
+      become: yes
+      become_user: "{{ user }}"
     - role: zaxos.docker-ce-ansible-role
       become: true
       become_user: root
+    - role: cimon-io.asdf
+      asdf_user: "{{ user }}"
+      asdf_plugins:
+        - name: "erlang"
+          versions: ["19.3", "20.2"]
+          global: "20.2"
+        - name: "elixir"
+          versions: ["1.5.3"]
   tasks:
     - name: "make dev-user able to use docker"
       become: true
       become_user: root
       user:
-        name: "{{ user }}"
+        name: "{{ ansible_ssh_user }}"
         groups: "docker"
         append: yes
