--- a/roles/rust/tasks/main.yml
+++ b/roles/rust/tasks/main.yml
@@ -3,20 +3,21 @@
   get_url:
     url: https://sh.rustup.rs
     dest: /tmp/rustup.sh
+    mode: 0755
 - name: install rust
   shell: |
-    sh /tmp/rustup.sh -y
-  args:
-    creates: '{{ user_home }}/.cargo/bin/rustc'
-- name: set restup deefault
+    sh /tmp/rustup.sh -y --no-modify-path
+  become: true
+  become_user: "{{ user }}"
+- name: set restup default
   shell: |
-    rustup default stable
+    {{ user_home }}/.cargo/bin/rustup default stable
 - name: set component add rust-src
   shell: |
-    rustup component add rust-src
+    {{ user_home }}/.cargo/bin/rustup component add rust-src
 - name: install rust tools
   shell: |
-    cargo install {{ item }}
+    {{ user_home }}/.cargo/bin/cargo install {{ item }}
   args:
     creates: '{{ user_home }}/.cargo/bin/{{ item }}'
   with_items:
