--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -9,7 +9,26 @@
   when: ansible_os_family == 'RedHat'
   become: yes
   become_user: root
-- name: Install apt libraries(Redhat) for vim
+- name: install vim(RedHat)
+  shell: |
+    ./configure \
+      --prefix={{ user_home }}/local \
+      --enable-fail-if-missing \
+      --enable-terminal \
+      --enable-fontset --enable-cscope \
+      --enable-perlinterp=dynamic \
+      --enable-luainterp=yes \
+      --with-luajit \
+      --enable-pythoninterp=dynamic \
+      --with-python-config-dir=$(dirname $(rpm -ql python-devel | grep '/Setup' | head -n 1)) \
+      --enable-python3interp=dynamic \
+      --with-python3-config-dir=$(dirname $(rpm -ql  python35u-devel | grep '/Setup' | head -n 1))
+      make install
+  when: ansible_os_family == 'RedHat'
+  args:
+    chdir: /tmp/vim.git
+    creates: '{{ user_home }}/local/bin/vim'
+- name: Install apt libraries(Ubuntu) for vim
   apt: name={{ item }} state=present
   with_items:
     [
@@ -21,10 +40,10 @@
   become_user: root
 - name: get vim source
   git: repo=https://github.com/vim/vim.git version=v8.0.1349 dest=/tmp/vim.git
-- name: install vim
+- name: install vim(Ubuntu)
   shell: |
     ./configure \
-      --prefix=$HOME/local \
+      --prefix={{ user_home }}/local \
       --enable-fail-if-missing \
       --enable-terminal \
       --enable-fontset --enable-cscope \
@@ -32,26 +51,7 @@
       --enable-luainterp=yes \
       --with-luajit \
       --enable-pythoninterp=dynamic \
-      --with-python-config-dir=$(dirname $(rpm -ql python-devel | grep '/Setup' | head -n 1)) \
-      --enable-python3interp=dynamic \
-      --with-python3-config-dir=$(dirname $(rpm -ql  python35u-devel | grep '/Setup' | head -n 1)); \
-      make install
-  when: ansible_os_family == 'RedHat'
-  args:
-    chdir: /tmp/vim.git
-    creates: '{{ user_home }}/local/bin/vim'
-- name: install vim
-  shell: |
-    ./configure \
-      --prefix=$HOME/local \
-      --enable-fail-if-missing \
-      --enable-terminal \
-      --enable-fontset --enable-cscope \
-      --enable-perlinterp=dynamic \
-      --enable-luainterp=yes \
-      --with-luajit \
-      --enable-pythoninterp=dynamic \
-      --enable-python3interp=dynamic \
+      --enable-python3interp=dynamic
       make install
   when: ansible_distribution == 'Ubuntu'
   args:
