--- a/site.yml
+++ b/site.yml
@@ -23,13 +23,28 @@
     - role: go
       become: yes
       become_user: "{{ user }}"
+    - role: ruby
+      become: yes
+      become_user: "{{ user }}"
     - role: python3
+      become: yes
+      become_user: "{{ user }}"
+    - role: ctags
+      become: yes
+      become_user: "{{ user }}"
+    - role: nodejs
       become: yes
       become_user: "{{ user }}"
     - role: vim
       become: yes
       become_user: "{{ user }}"
     - role: nvim
+      become: yes
+      become_user: "{{ user }}"
+    - role: tmux
+      become: yes
+      become_user: "{{ user }}"
+    - role: tmux-xpanes
       become: yes
       become_user: "{{ user }}"
     - role: jq
@@ -46,6 +61,7 @@
           global: "20.2"
         - name: "elixir"
           versions: ["1.5.3"]
+          global: "1.5.3"
   tasks:
     - name: "make dev-user able to use docker"
       become: true
