--- a/roles/develop/tasks/main.yml
+++ b/roles/develop/tasks/main.yml
@@ -1,52 +1,30 @@
 ---
-- name: Install yum libraries(Redhat)
-  yum: name={{ item }} state=present
-  with_items:
-    [
-      '@Development Tools',
-      ntp, ntp-doc, ntpdate, kernel-devel, kernel-headers, m4,
-      curl, git, mercurial, wget,
-      llvm, lldb,
-      telnet, tmux, lsof, tcpdump,
-      java-1.8.0-openjdk-devel-debug,
-      vim-enhanced, ruby, texinfo,
-      glibc-static, cmake,
-      bzip2-devel, curl-devel, expat-devel, ncurses-devel, zlib-devel,
-      yum-utils, device-mapper-persistent-data, lvm2,
-    ]
+- include: main-Darwin.yml
+  when: ansible_system == "Darwin"
+- include: main-RedHat.yml
   when: ansible_os_family == 'RedHat'
-  become: yes
-  become_user: root
-- name: Install apt libraries(Debian)
-  apt: name={{ item }} state=present update_cache=yes
-  with_items:
-    [
-      ntp, ntp-doc, ntpdate,
-      build-essential, m4, gcc-6-base,
-      curl, git, mercurial, wget,
-      llvm, lldb,
-      telnet, tmux, lsof, tcpdump,
-      openjdk-8-jdk,
-      vim, ruby, texinfo,
-      libtool, libtool-bin, autoconf, automake, g++, pkg-config, unzip, cmake,
-      libcurl4-openssl-dev, libexpat-dev, libncurses-dev, zlib1g-dev, libbz2-dev,
-      fakeroot, build-essential, gcc-arm-linux-gnueabihf,
-      libncurses5, libncurses5-dev, libelf-dev, binutils-dev, devscripts,
-      u-boot-tools,
-    ]
+- include: main-Debian.yml
   when: ansible_os_family == 'Debian'
-  become: yes
-  become_user: root
 - name: setup sshconfig
-  template: src=ssh-config dest={{ user_home }}/.ssh/config mode=0644 backup=yes
+  template:
+    src: ssh-config
+    dest: "{{ user_home }}/.ssh/config"
+    mode: 0644
+    backup: yes
 - name: setup id_rsa.github
   copy:
     src: develop/id_rsa.github
     dest: "{{ user_home }}/.ssh/id_rsa.github"
     mode: 0600
     owner: "{{ user }}"
+    backup: yes
 - name: dotfiles をインストールする
-  git: repo=https://github.com/masu-mi/dotfiles.git dest={{ user_home }}/dotfiles update=yes recursive=yes version=master
+  git:
+    repo: https://github.com/masu-mi/dotfiles.git
+    dest: "{{ user_home }}/dotfiles"
+    update: yes
+    recursive: yes
+    version: master
 - name: backup exist .*rc
   shell: |
     if [ -f {{ user_home }}/{{ item }} ]; then
