--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,13 +1,11 @@
 ---
-- name: update all packages in RedHat
-  yum:
-    name: '*'
-    state: latest
-  when: ansible_os_family == 'RedHat'
-  become: yes
-  become_user: root
-- name: update all packages in Debian
-  apt: upgrade=dist update_cache=yes
-  when: ansible_os_family == 'Debian'
+- name: update all packages
+  block:
+    - yum:
+        name: '*'
+        state: latest
+      when: ansible_os_family == 'RedHat'
+    - apt: upgrade=dist update_cache=yes
+      when: ansible_os_family == 'Debian'
   become: yes
   become_user: root
