--- a/roles/tmux-xpanes/tasks/main.yml
+++ b/roles/tmux-xpanes/tasks/main.yml
@@ -5,7 +5,7 @@
     dest: /tmp/xpanes
 - name: install tmux-xpanes
   shell: |
-    install -m 0755 xpanes {{ user_home }}/local/bin/xpanes
+    install -m 0755 xpanes {{ tmux_xpane_dir }}/bin/xpanes
     echo "Ref: https://github.com/greymd/tmux-xpanes"
   args:
     chdir: /tmp/
