--- a/roles/develop/tasks/main.yml
+++ b/roles/develop/tasks/main.yml
@@ -8,33 +8,33 @@
 - name: setup sshconfig
   template:
     src: ssh-config
-    dest: "{{ user_home }}/.ssh/config"
+    dest: "{{ develop_home }}/.ssh/config"
     mode: 0644
     backup: yes
 - name: setup id_rsa.github
   copy:
     src: develop/id_rsa.github
-    dest: "{{ user_home }}/.ssh/id_rsa.github"
+    dest: "{{ develop_home }}/.ssh/id_rsa.github"
     mode: 0600
-    owner: "{{ user }}"
+    owner: "{{ ansible_user }}"
     backup: yes
 - name: dotfiles をインストールする
   git:
     repo: https://github.com/masu-mi/dotfiles.git
-    dest: "{{ user_home }}/dotfiles"
+    dest: "{{ develop_home }}/dotfiles"
     update: yes
     recursive: yes
     version: master
 - name: backup exist .*rc
   shell: |
-    if [ -f {{ user_home }}/{{ item }} ]; then
-      mv {{ user_home }}/{{ item }} {{ user_home }}/{{ item }}.bak
+    if [ -f {{ develop_home }}/{{ item }} ]; then
+      mv {{ develop_home }}/{{ item }} {{ develop_home }}/{{ item }}.bak
     fi
   with_items:
     [ .bashrc, .bash_profile, .zshrc ]
 # home~以下にdir,linkを作る(本来は dotfilesのMakefileで実行する)
 - name: makedirs
-  file: path={{ user_home }}/{{ item }} state=directory
+  file: path={{ develop_home }}/{{ item }} state=directory
   with_items: [
     ".bashrcs",
     "works",
@@ -45,11 +45,11 @@
     ".config",
     ]
 - name: dotfiles のlinkを作成する
-  file: src={{ user_home }}/dotfiles/{{ item }} path={{ user_home }}/{{ item }} state=link
+  file: src={{ develop_home }}/dotfiles/{{ item }} path={{ develop_home }}/{{ item }} state=link
   with_items: [ .ackrc, .bashrc, .bash_profile, .gitconfig, .inputrc, .screenrc, .tmux.conf, .vim, .zshrc, .sqliterc ]
 - name: for nvim
-  file: src={{ user_home }}/dotfiles/.vim path={{ user_home }}/.config/nvim state=link
+  file: src={{ develop_home }}/dotfiles/.vim path={{ develop_home }}/.config/nvim state=link
 - name: for vim
-  file: src={{ user_home }}/dotfiles/.vim/init.vim path={{ user_home }}/.vimrc state=link
+  file: src={{ develop_home }}/dotfiles/.vim/init.vim path={{ develop_home }}/.vimrc state=link
 - name: .bash_tokens を作成する(サービストークン用)
-  file: path={{ user_home }}/.bash_tokens state=touch
+  file: path={{ develop_home }}/.bash_tokens state=touch
