--- a/roles/develop/tasks/main.yml
+++ b/roles/develop/tasks/main.yml
@@ -1,55 +1,61 @@
 ---
-- include: main-Darwin.yml
-  when: ansible_system == "Darwin"
-- include: main-RedHat.yml
-  when: ansible_os_family == 'RedHat'
-- include: main-Debian.yml
-  when: ansible_os_family == 'Debian'
-- name: setup sshconfig
-  template:
-    src: ssh-config
-    dest: "{{ develop_home }}/.ssh/config"
-    mode: 0644
-    backup: yes
-- name: setup id_rsa.github
-  copy:
-    src: develop/id_rsa.github
-    dest: "{{ develop_home }}/.ssh/id_rsa.github"
-    mode: 0600
-    owner: "{{ ansible_user }}"
-    backup: yes
-- name: dotfiles をインストールする
-  git:
-    repo: https://github.com/masu-mi/dotfiles.git
-    dest: "{{ develop_home }}/dotfiles"
-    update: yes
-    recursive: yes
-    version: master
-- name: backup exist .*rc
-  shell: |
-    if [ -f {{ develop_home }}/{{ item }} ]; then
-      mv {{ develop_home }}/{{ item }} {{ develop_home }}/{{ item }}.bak
-    fi
-  with_items:
-    [ .bashrc, .bash_profile, .zshrc ]
-# home~以下にdir,linkを作る(本来は dotfilesのMakefileで実行する)
-- name: makedirs
-  file: path={{ develop_home }}/{{ item }} state=directory
-  with_items: [
-    ".bashrcs",
-    "works",
-    "local/bin",
-    "local/lib",
-    "local/doc",
-    ".backup/vim",
-    ".config",
-    ]
-- name: dotfiles のlinkを作成する
-  file: src={{ develop_home }}/dotfiles/{{ item }} path={{ develop_home }}/{{ item }} state=link
-  with_items: [ .ackrc, .bashrc, .bash_profile, .gitconfig, .inputrc, .screenrc, .tmux.conf, .vim, .zshrc, .sqliterc ]
-- name: for nvim
-  file: src={{ develop_home }}/dotfiles/.vim path={{ develop_home }}/.config/nvim state=link
-- name: for vim
-  file: src={{ develop_home }}/dotfiles/.vim/init.vim path={{ develop_home }}/.vimrc state=link
-- name: .bash_tokens を作成する(サービストークン用)
-  file: path={{ develop_home }}/.bash_tokens state=touch
+- block:
+    - include: main-Darwin.yml
+      when: ansible_system == "Darwin"
+    - include: main-RedHat.yml
+      when: ansible_os_family == 'RedHat'
+    - include: main-Debian.yml
+      when: ansible_os_family == 'Debian'
+  become: yes
+  become_user: root
+- block:
+    - name: setup sshconfig
+      template:
+        src: ssh-config
+        dest: "{{ develop_home }}/.ssh/config"
+        mode: 0644
+        backup: yes
+    - name: setup id_rsa.github
+      copy:
+        src: develop/id_rsa.github
+        dest: "{{ develop_home }}/.ssh/id_rsa.github"
+        mode: 0600
+        owner: "{{ ansible_user }}"
+        backup: yes
+    - name: dotfiles をインストールする
+      git:
+        repo: https://github.com/masu-mi/dotfiles.git
+        dest: "{{ develop_home }}/dotfiles"
+        update: yes
+        recursive: yes
+        version: master
+    - name: backup exist .*rc
+      shell: |
+        if [ -f {{ develop_home }}/{{ item }} ]; then
+          mv {{ develop_home }}/{{ item }} {{ develop_home }}/{{ item }}.bak
+        fi
+      with_items:
+        [ .bashrc, .bash_profile, .zshrc ]
+    # home~以下にdir,linkを作る(本来は dotfilesのMakefileで実行する)
+    - name: makedirs
+      file: path={{ develop_home }}/{{ item }} state=directory
+      with_items: [
+        ".bashrcs",
+        "works",
+        "local/bin",
+        "local/lib",
+        "local/doc",
+        ".backup/vim",
+        ".config",
+        ]
+    - name: dotfiles のlinkを作成する
+      file: src={{ develop_home }}/dotfiles/{{ item }} path={{ develop_home }}/{{ item }} state=link
+      with_items: [ .ackrc, .bashrc, .bash_profile, .gitconfig, .inputrc, .screenrc, .tmux.conf, .vim, .zshrc, .sqliterc ]
+    - name: for nvim
+      file: src={{ develop_home }}/dotfiles/.vim path={{ develop_home }}/.config/nvim state=link
+    - name: for vim
+      file: src={{ develop_home }}/dotfiles/.vim/init.vim path={{ develop_home }}/.vimrc state=link
+    - name: .bash_tokens を作成する(サービストークン用)
+      file: path={{ develop_home }}/.bash_tokens state=touch
+  become: yes
+  become_user: "{{ develop_user }}"
