--- a/roles/develop/tasks/main-Darwin.yml
+++ b/roles/develop/tasks/main-Darwin.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install apt libraries(Darwin)
-  homebrew: name={{ item }} state=present update_cache=yes
+  homebrew: name={{ item }} state=present
   with_items:
     [
       ntp, gcc, gcc@6,
