--- a/roles/go/tasks/main.yml
+++ b/roles/go/tasks/main.yml
@@ -1,39 +1,42 @@
 ---
-- name: mkdir dev as $GOPATH
-  file:
-    path: "{{ item }}"
-    state: directory
-  with_items:
-    [
-     "{{ gopath }}",
-     "{{ gopath }}/bin",
-     "{{ gopath }}/src",
-    ]
-- name: create dir go1.4
-  file: path={{ go14root }} state=directory
-- name: deploy go1.4
-  shell: wget -O - https://storage.googleapis.com/golang/go1.4.3.linux-amd64.tar.gz | tar -zxvf - --directory={{ go14root }} --strip-components 1
-  args:
-    creates: '{{ go14root }}/bin/go'
-- name: prepare to install Go
-  git: repo=https://go.googlesource.com/go dest={{ goroot }} version=go1.9
-- name: install Go
-  shell: ./all.bash
-  args:
-    chdir: '{{ goroot }}/src'
-    creates: '{{ goroot }}/bin/go'
-- name: install glide
-  shell: |
-    curl https://glide.sh/get | sh
-  args:
-    creates: "{{ gopath }}/bin/glide"
-- name: install tools
-  shell: |
-    GOPATH={{ gopath }} {{ goroot }}/bin/go get "{{ item }}"
-  with_items:
-    [
-      "github.com/derekparker/delve/cmd/dlv",
-      "github.com/peco/peco/cmd/peco",
-      "github.com/motemen/ghq",
-      "github.com/direnv/direnv",
-    ]
+- block:
+    - name: mkdir dev as $GOPATH
+      file:
+        path: "{{ item }}"
+        state: directory
+      with_items:
+        [
+         "{{ gopath }}",
+         "{{ gopath }}/bin",
+         "{{ gopath }}/src",
+        ]
+    - name: create dir go1.4
+      file: path={{ go14root }} state=directory
+    - name: deploy go1.4
+      shell: wget -O - https://storage.googleapis.com/golang/go1.4.3.linux-amd64.tar.gz | tar -zxvf - --directory={{ go14root }} --strip-components 1
+      args:
+        creates: '{{ go14root }}/bin/go'
+    - name: prepare to install Go
+      git: repo=https://go.googlesource.com/go dest={{ goroot }} version=go1.9
+    - name: install Go
+      shell: ./all.bash
+      args:
+        chdir: '{{ goroot }}/src'
+        creates: '{{ goroot }}/bin/go'
+    - name: install glide
+      shell: |
+        curl https://glide.sh/get | sh
+      args:
+        creates: "{{ gopath }}/bin/glide"
+    - name: install tools
+      shell: |
+        GOPATH={{ gopath }} {{ goroot }}/bin/go get "{{ item }}"
+      with_items:
+        [
+          "github.com/derekparker/delve/cmd/dlv",
+          "github.com/peco/peco/cmd/peco",
+          "github.com/motemen/ghq",
+          "github.com/direnv/direnv",
+        ]
+  become: yes
+  become_user: "{{ user }}"
