--- a/roles/develop/tasks/main-Debian.yml
+++ b/roles/develop/tasks/main-Debian.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install apt libraries(Debian)
-  apt: name={{ item }} state=present update_cache=yes
+  apt: name={{ item }} state=present
   with_items:
     [
       ntp, ntp-doc, ntpdate,
