--- a/roles/python3/defaults/main.yml
+++ b/roles/python3/defaults/main.yml
@@ -3,5 +3,5 @@
     setuptools, wheel, twine,
     virtualenv, virtualenvwrapper,
     pyflakes3k, mypy, pylint, pep8,
-    cookiecutter,
+    cookiecutter, aws,
   ]
