--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -1,9 +1,10 @@
 ---
-- name: install pkgs of pip3
-  shell: |
-    pip3 install "neovim"
+- include: install-pip-neovim.yml
+  when: ansible_distribution != 'Darwin'
+- include: install-pip-neovim.yml
   become: yes
   become_user: root
+  when: ansible_distribution == 'Darwin'
 - name: get nvim source
   git: repo=https://github.com/neovim/neovim.git version=v0.2.2 dest=/tmp/neovim.git
 - name: install nvim
