--- a/roles/python3/tasks/main.yml
+++ b/roles/python3/tasks/main.yml
@@ -5,20 +5,9 @@
   when: ansible_os_family == 'RedHat'
 - include: main-Ubuntu.yml
   when: ansible_distribution == 'Ubuntu'
-- shell: pip3 install --upgrade pip
-  register: result
-  changed_when: '"Requirement already up-to-date" not in result.stdout'
+- include: install-pip-packages.yml
+  when: ansible_distribution != 'Darwin'
+- include: install-pip-packages.yml
   become: yes
   become_user: root
-- shell: pip3 install --upgrade setuptools
-  register: result
-  changed_when: '"Requirement already up-to-date" not in result.stdout'
-  become: yes
-  become_user: root
-- name: install pkgs with pip3
-  pip:
-    name: "{{ item }}"
-    executable: pip3
-  with_items: "{{ pip3_pkgs }}"
-  become: yes
-  become_user: root
+  when: ansible_distribution == 'Darwin'
