--- a/roles/develop/tasks/main.yml
+++ b/roles/develop/tasks/main.yml
@@ -1,13 +1,15 @@
 ---
 - block:
-    - include: main-Darwin.yml
-      when: ansible_system == "Darwin"
     - include: main-RedHat.yml
       when: ansible_os_family == 'RedHat'
     - include: main-Debian.yml
       when: ansible_os_family == 'Debian'
   become: yes
   become_user: root
+- include: main-Darwin.yml
+  when: ansible_system == "Darwin"
+  become: yes
+  become_user: "{{ ansible_user_id }}"
 - block:
     - name: setup sshconfig
       template:
