--- a/roles/develop/tasks/main-Darwin.yml
+++ b/roles/develop/tasks/main-Darwin.yml
@@ -1,4 +1,5 @@
 ---
+- debug: var=ansible_user_id
 - name: Install libraries(Darwin)
   homebrew: name={{ item }} state=present
   with_items:
@@ -13,5 +14,3 @@
       ncurses, binutils,
       u-boot-tools,
     ]
-  become: yes
-  become_user: "{{ ansible_user_id }}"
