--- a/roles/fzf/defaults/main.yml
+++ b/roles/fzf/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
-fzf_dir: "/home/{{ ansible_user }}/.fzf"
+fzf_dir: "/{{ ansible_user_dir }}/.fzf"
 fzf_branch: "master"
 # defaults file for fzf
