--- a/roles/fzf/tasks/main.yml
+++ b/roles/fzf/tasks/main.yml
@@ -3,7 +3,7 @@
     repo: "https://github.com/junegunn/fzf.git"
     dest: "{{ fzf_dir }}"
     version: "{{ fzf_branch }}"
-- shell: ./install
+- shell: ./install --no-bash --no-zsh
   args:
     chdir: "{{ fzf_dir }}"
     creates: "{{ fzf_dir }}/bin/fzf"
